# sock-study

./: CMakeLists.txt
sockets-pjc/: CMakeLists.txt  sockets-pjc.cpp  sockets-pjc.h
sockets-pjc/section0/: client-echo.cpp  prac.hpp  s.cpp  server-echo.cpp
sockets-pjc/section1/: ifsc.cpp  internetstream.hpp
sockets-pjc/section2/: sctp.cpp
